--- a/public/index.html
+++ b/public/index.html
@@ -22,5 +22,6 @@
     	<p class="thirteen">2</p>
     	<p class="fourteen">1</p>
     	<p class="fifthteen">0 VeryAcid</p>
+		<p class="fifthteen">0 VeryAcid</p>
     </div>
     </body>
